--- a/ArcsSystem/templates/users/private_profile_view.html
+++ b/ArcsSystem/templates/users/private_profile_view.html
@@ -1,57 +1,203 @@
 {% extends "base.html" %}
+{% load static %}
+{% load i18n %}
 
 {% block content %}
 <h1>Private Profile view</h1>
 
+{% if Admin_project_submissions %}
+
+<div class="custom-container">
+
 <form id="edit-save-private-profile-form" isEditing="false" action="{% url 'userprofile_private_view' %}" method="POST">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type = "submit" id="edit-save-private-profile-submit-button" href="#">Start editing</button>
+
+    <button> submit </button>
+
+
+
+<div class="row">
+    {% for ProjectEntry in Admin_project_submissions %}
+    <div style="padding-left: 20px; padding-right: 20px" class="col-lg-3 col-md-4 col-xs-6 mb-5">
+        <div class="project-item">
+            <input class="form-control " type="checkbox" name= "acpt_{{ProjectEntry.id}}">
+            <div class="row">
+                <div class=" col">  
+                    <div  class="col project-items-justify blackFieldWhiteText">
+                        <h4 align="center"><a style="color: white; font-size: 16px" id="project-items-link" href="{% url 'projects:project_submission_detail' ProjectEntry.id %}"> {{ ProjectEntry.name|truncatechars:20 }}</a></h4>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                {% if ProjectEntry.image %}
+                <div class="col">
+                    <img class="mg-fluid w-100" src="{{ProjectEntry.image.url}}" alt="{% trans 'Responsive image' %}"/>
+                </div>
+                {% else %}
+                <div class="col" >
+                    <div style="height: 20px; background: coral; margin-bottom: 5px">
+                        <h5 align="center"  > No image</h5>
+                    </div>
+                </div>
+                {% endif %}
+            </div>
+            <div class="col" style="padding-right: 5px; padding-left: 5px; margin-top: 3px">
+                <div class="row Lato-font ">
+                    <div class="col" >
+                        <span class="font-weight-bold">PROJECT FOCUS: </span> <span >{{ProjectEntry.aim|truncatechars:40}}</span>
+                    </div>
+                </div>
+                <hr>
+                <div class="row Lato-font">
+
+                    <div class="col">
+                        <span >DESCRIPTION: </span> <span >{{ProjectEntry.description|truncatechars:40}}</span>
+                    </div>
+                </div>
+                <hr>
+                <div class="row Lato-font">
+                    <div class="col ">
+                        STATUS: {{ProjectEntry.get_status_name}}
+                    </div>
+                </div>
+                <hr>
+                keywords:
+                {% for keyword in ProjectEntry.keywords.all %}
+                <span style="background: black; color: white; margin: 3px; padding: 3px; border-radius: 5px">{{keyword}} </span> 
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+    {% endfor %}
+</div>
 </form>
 
-<script type="text/javascript">
-    $(document).ready(function () {
-        $("#edit-save-private-profile-submit-button").on('click', function (e) {
-            var isEditing = $("#edit-save-private-profile-form").attr('isEditing');
-            var errorlist = document.getElementsByClassName('errorlist').length
+{% endif %}
 
-            if (isEditing == "false") {
-                $("#edit-save-private-profile-form").attr('isEditing', "true");
-                $("#edit-save-private-profile-submit-button").text("Save");
-                toggleEnabled(true);
-                e.preventDefault();
-                
-            }
-            else {
-                $("#edit-save-private-profile-form").attr('isEditing', "false");
-                $("#edit-save-private-profile-submit-button").text("Start editing");
-                $("#edit-save-private-profile-form").submit();
-            }
-        });
-    });
 
-    function toggleEnabled(state) {
-        $.each($("#edit-save-private-profile-form > p > input"), function () {
-            if($(this).prop('id')=='id_username'){
-                return;
-            }
-            if (state) {
-                $(this).removeAttr('disabled');
-            }
-            else {
-                $(this).attr('disabled', 'disabled');
-            }
-        });
-        $.each($("#edit-save-private-profile-form > p > select"), function () {
 
-            if (state) {
-                $(this).removeAttr('disabled');
-            }
-            else {
-                $(this).attr('disabled', 'disabled');
-            }
-        });
-    }
-</script>
+
+<br>
+<hr>
+<h5> My projects </h5>
+
+<div class="row">
+    {% for ProjectEntry in My_approved_projects %}
+    <div style="padding-left: 20px; padding-right: 20px" class="col-lg-3 col-md-4 col-xs-6 mb-5">
+        <div class="project-item">
+            <div class="row">
+                <div class=" col">  
+                    <div  class="col project-items-justify blackFieldWhiteText">
+                        <h4 align="center"><a style="color: white; font-size: 16px" id="project-items-link" href="{% url 'projects:project_detail' ProjectEntry.id %}"> {{ ProjectEntry.name|truncatechars:20 }}</a></h4>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                {% if ProjectEntry.image %}
+                <div class="col">
+                    <img class="mg-fluid w-100" src="{{ProjectEntry.image.url}}" alt="{% trans 'Responsive image' %}"/>
+                </div>
+                {% else %}
+                <div class="col" >
+                    <div style="height: 20px; background: coral; margin-bottom: 5px">
+                        <h5 align="center"  > No image</h5>
+                    </div>
+                </div>
+                {% endif %}
+            </div>
+            <div class="col" style="padding-right: 5px; padding-left: 5px; margin-top: 3px">
+                <div class="row Lato-font ">
+                    <div class="col" >
+                        <span class="font-weight-bold">PROJECT FOCUS: </span> <span >{{ProjectEntry.aim|truncatechars:40}}</span>
+                    </div>
+                </div>
+                <hr>
+                <div class="row Lato-font">
+
+                    <div class="col">
+                        <span >DESCRIPTION: </span> <span >{{ProjectEntry.description|truncatechars:40}}</span>
+                    </div>
+                </div>
+                <hr>
+                <div class="row Lato-font">
+                    <div class="col ">
+                        STATUS: {{ProjectEntry.get_status_name}}
+                    </div>
+                </div>
+                <hr>
+                keywords:
+                {% for keyword in ProjectEntry.keywords.all %}
+                <span style="background: black; color: white; margin: 3px; padding: 3px; border-radius: 5px">{{keyword}} </span> 
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+    {% endfor %}
+</div>
+
+
+<br> <br> <hr>
+
+<h5> My pending projects </h5>
+
+
+
+<div class="row">
+    {% for ProjectEntry in My_pending_projects %}
+    <div style="padding-left: 20px; padding-right: 20px" class="col-lg-3 col-md-4 col-xs-6 mb-5">
+        <div class="project-item">
+            <div class="row">
+                <div class=" col">  
+                    <div  class="col project-items-justify blackFieldWhiteText">
+                        <h4 align="center"><a style="color: white; font-size: 16px" id="project-items-link" href="{% url 'projects:project_submission_detail' ProjectEntry.id %}"> {{ ProjectEntry.name|truncatechars:20 }}</a></h4>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                {% if ProjectEntry.image %}
+                <div class="col">
+                    <img class="mg-fluid w-100" src="{{ProjectEntry.image.url}}" alt="{% trans 'Responsive image' %}"/>
+                </div>
+                {% else %}
+                <div class="col" >
+                    <div style="height: 20px; background: coral; margin-bottom: 5px">
+                        <h5 align="center"  > No image</h5>
+                    </div>
+                </div>
+                {% endif %}
+            </div>
+            <div class="col" style="padding-right: 5px; padding-left: 5px; margin-top: 3px">
+                <div class="row Lato-font ">
+                    <div class="col" >
+                        <span class="font-weight-bold">PROJECT FOCUS: </span> <span >{{ProjectEntry.aim|truncatechars:40}}</span>
+                    </div>
+                </div>
+                <hr>
+                <div class="row Lato-font">
+
+                    <div class="col">
+                        <span >DESCRIPTION: </span> <span >{{ProjectEntry.description|truncatechars:40}}</span>
+                    </div>
+                </div>
+                <hr>
+                <div class="row Lato-font">
+                    <div class="col ">
+                        STATUS: {{ProjectEntry.get_status_name}}
+                    </div>
+                </div>
+                <hr>
+                keywords:
+                {% for keyword in ProjectEntry.keywords.all %}
+                <span style="background: black; color: white; margin: 3px; padding: 3px; border-radius: 5px">{{keyword}} </span> 
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+    {% endfor %}
+</div>
+
+
+
+
 
 {% endblock %}
