--- a/ArcsSystem/templates/staticpages/case_studies.html
+++ b/ArcsSystem/templates/staticpages/case_studies.html
@@ -10,7 +10,14 @@
         <div class="row">
             <div class="col">
                 {% for instance in case_studies %}
-                    <p>{{ instance.title }}</p>
+                    {% for block in instance.case_studies_body %}
+                        {% if block.block_type == 'title' %}
+                            {{ block.value }}
+                        {% endif %}
+                        {% if block.block_type == 'content' %}
+                            {{ block.value }}
+                        {% endif %}
+                    {% endfor %}
                 {% endfor %}
             </div>
         </div>
