--- a/ArcsSystem/templates/staticpages/faq.html
+++ b/ArcsSystem/templates/staticpages/faq.html
@@ -10,7 +10,15 @@
         <div class="row">
             <div class="col">
                 {% for instance in faq %}
-                    <p>{{ instance.title }}</p>
+                    <!-- {{ instance.title }} -->
+                    {% for block in instance.faq_body %}
+                        {% if block.block_type == 'title' %}
+                            {{ block.value }}
+                        {% endif %}
+                        {% if block.block_type == 'content' %}
+                            {{ block.value }}
+                        {% endif %}
+                    {% endfor %}
                 {% endfor %}
             </div>
         </div>
