--- a/ArcsSystem/templates/staticpages/swedish_citizen_science.html
+++ b/ArcsSystem/templates/staticpages/swedish_citizen_science.html
@@ -10,10 +10,15 @@
         <div class="row">
             <div class="col">
                 {% for instance in swedish_citizen_science%}
-
-                    {{ instance.title }}
+                    {% for block in instance.swedish_citizen_science_body %}
+                        {% if block.block_type == 'title' %}
+                            {{ block.value }}
+                        {% endif %}
+                        {% if block.block_type == 'content' %}
+                            {{ block.value }}
+                        {% endif %}
+                    {% endfor %}
                 {% endfor %}
-
             </div>
         </div>
     </div>
