--- a/ArcsSystem/templates/staticpages/what_is_citizen_science.html
+++ b/ArcsSystem/templates/staticpages/what_is_citizen_science.html
@@ -11,12 +11,15 @@
             <div class="col">
 
                 {% for instance in citizen_science %}
-                {{ instance.title }}
-                {{ instance.body }}
-                    
+                    {% for block in instance.citizen_science_body %}
+                        {% if block.block_type == 'title' %}
+                            {{ block.value }}
+                        {% endif %}
+                        {% if block.block_type == 'content' %}
+                            {{ block.value }}
+                        {% endif %}
+                    {% endfor %}
                 {% endfor %}
-
-
             </div>
         </div>
     </div>
