create new static pages and move old version to oldmodels directory

--- a/ArcsSystem/templates/base.html
+++ b/ArcsSystem/templates/base.html
@@ -126,7 +126,7 @@
 										</a>
 								</button>
 							</div>
-							
+
 						<!-- user is NOT loged in: show Signup, login -->
 						{% else %}
 							<div id="signup" class="col-3 p-0 d-flex justify-content-end align-items-center">
@@ -292,7 +292,7 @@
 					</div>
 				</div>
 				<div class="col-auto">
-					<a href="{% url 'staticpages:sourcecode_detail' %}">
+					<a href="https://github.com/christopherkullenberg/medborgarforskning.se">
 					<p class="mb-0">{% trans "Powered by: The ARCS open source platform" %}</p>
 					</a>
 				</div>
