--- a/ArcsSystem/templates/nav_main.html
+++ b/ArcsSystem/templates/nav_main.html
@@ -61,7 +61,7 @@
 
 
 
-                        <a class="dropdown-item font-weight-bold" href="{% url 'staticpages:what_is_citizen_science'  %}">{% trans "What is Citizen Science?" %}</a>
+                        <a class="dropdown-item font-weight-bold" href="#">{% trans "What is Citizen Science?" %}</a>
 
 
 
@@ -73,7 +73,7 @@
 
 
 
-                                    <a class="dropdown-item" href="{% url 'staticpages:swedish_citizen_science' %}">{% trans "Swedish Citizen Science" %}</a>
+                                    <a class="dropdown-item" href="#">{% trans "Swedish Citizen Science" %}</a>
 
 
 
@@ -83,13 +83,13 @@
 
                         <div class="dropdown-divider"></div>
 
-                            <a class="dropdown-item font-weight-bold" href="{% url 'staticpages:case_studies' %}">{% trans "Case Studies" %}</a>
+                            <a class="dropdown-item font-weight-bold" href="#">{% trans "Case Studies" %}</a>
 
                         <div class="dropdown-divider"></div>
 
 
 
-                            <a class="dropdown-item font-weight-bold" href="{% url 'staticpages:faq' %}">{%trans "FAQ" %}</a>
+                            <a class="dropdown-item font-weight-bold" href="#">{%trans "FAQ" %}</a>
 
 
 
@@ -97,7 +97,7 @@
 
 
 
-                            <a class="dropdown-item font-weight-bold" href="{% url 'staticpages:additional_resources' %}">{%trans "Additional Resources" %}</a>
+                            <a class="dropdown-item font-weight-bold" href="#">{%trans "Additional Resources" %}</a>
 
 
 
@@ -105,7 +105,7 @@
 
                 </li>
 
-                
+
 
                  <li class="nav-item header-menu-li-style col-3">
                     <a class=" main-menu-buttons-font text-wrap" href="{% url 'workpackages:category_view' %}" role="button" aria-haspopup="true" aria-expanded="false" style="width: 10rem;">
@@ -219,4 +219,3 @@
 </nav>
 
 {% endblock main_menu %}
-
